Modify code to handle MTC TM1, which doesn't have MAZ (only TAZ)

--- a/daysim_pipeline/pipeline_config_mtc.toml
+++ b/daysim_pipeline/pipeline_config_mtc.toml
@@ -7,6 +7,9 @@ person_filename = "person.csv"
 trip_filename = "trip.csv"
 vehicle_filename = "vehicle.csv"
 
+[model]
+agency_model = "MTC_TM1"
+
 [raw]
 dir = "M:/Data/HomeInterview/Bay Area Travel Study 2023/Data/Full Weighted 2023 Dataset/WeightedDataset_02212025"
 
