--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,13 @@ packages = ["src/travel_diary_survey_tools"]
 
 [tool.ruff]
 line-length = 80
-select = ["ALL"]
+lint.select = ["ALL"]
+lint.ignore = [
+    "D203",  # Use D211 (no blank line before class)
+    "D213",  # Use D212 (summary on first line)
+]
+exclude = ["scripts/daysim"]
+
 
 [tool.ruff.lint.per-file-ignores]
 "tests/**/*.py" = [
