--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dev = [
     "jupyter>=1.1.1",
     "pandas>=2.3.3",
     "plotly>=6.4.0",
+    "pre-commit>=4.3.0",
     "pytest>=8.4.2",
     "pytest-cov>=7.0.0",
     "ruff>=0.14.3",
@@ -38,6 +39,9 @@ lint.ignore = [
     "D213",  # Use D212 (summary on first line)
 ]
 exclude = ["scripts/daysim"]
+
+[tool.ruff.pydocstyle]
+convention = "google"
 
 
 [tool.ruff.lint.per-file-ignores]
