--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           python-version: '3.12'
 
       - name: Install Ruff
-        run: uv pip install --system ruff
+        run: uv pip install ruff
 
       - name: Run Ruff linting
         run: ruff check .
@@ -53,8 +53,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          uv pip install --system -e .
-          uv pip install --system pytest pytest-cov
+          uv pip install -e .
+          uv pip install pytest pytest-cov
 
       - name: Run tests with coverage
         run: pytest --cov=travel_diary_survey_tools --cov-report=xml --cov-report=term-missing
