--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main, develop, packagify ]
+    branches: [main, develop, packagify]
   pull_request:
-    branches: [ main, develop ]
+    branches: [main, develop]
 
 jobs:
   lint:
@@ -22,23 +22,21 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'
+          python-version: "3.12"
 
-      - name: Install Ruff
-        run: uv pip install ruff
-
-      - name: Run Ruff linting
-        run: ruff check .
-
-      - name: Run Ruff formatting check
-        run: ruff format --check .
+      - name: Run Ruff (lint + format check)
+        run: |
+          uv run ruff check .
+          uv run ruff format --check .
 
   test:
     name: Test (Python ${{ matrix.python-version }})
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        python-version: ['3.11', '3.12', '3.13', '3.14']
+        python-version: ["3.11", "3.12", "3.13", "3.14"]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -48,35 +46,36 @@ jobs:
         with:
           enable-cache: true
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Install Python ${{ matrix.python-version }}
         run: uv python install ${{ matrix.python-version }}
 
-      - name: Install dependencies
-        run: |
-          uv pip install -e .
-          uv pip install pytest pytest-cov
+      - name: Sync environment
+        run: uv sync --all-extras --dev
 
-      - name: Run tests with coverage
-        run: pytest --cov=travel_diary_survey_tools --cov-report=xml --cov-report=term-missing
+      - name: Run pytest with coverage
+        run: |
+          uv run pytest --cov=travel_diary_survey_tools \
+                        --cov-report=xml \
+                        --cov-report=term-missing
 
       - name: Upload coverage to Codecov
         if: matrix.python-version == '3.12'
         uses: codecov/codecov-action@v4
         with:
-          file: ./coverage.xml
-          fail_ci_if_error: false
+          files: ./coverage.xml
           token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: false
 
   check:
-    name: All checks passed
+    name: ✅ All checks passed
     needs: [lint, test]
     runs-on: ubuntu-latest
     if: always()
     steps:
-      - name: Check if all jobs succeeded
+      - name: Aggregate results
         run: |
           if [ "${{ needs.lint.result }}" != "success" ] || [ "${{ needs.test.result }}" != "success" ]; then
-            echo "One or more checks failed"
+            echo "❌ One or more checks failed."
             exit 1
           fi
-          echo "All checks passed!"
+          echo "✅ All checks passed successfully!"
