--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ dependencies = [
 ]
 
 [dependency-groups]
+test = [
+    "pytest>=8.4.2",
+    "pytest-cov>=7.0.0",
+]
 dev = [
     "jupyter>=1.1.1",
     "pandas>=2.3.3",
@@ -38,10 +42,8 @@ lint.ignore = [
     "D203",  # Use D211 (no blank line before class)
     "D213",  # Use D212 (summary on first line)
 ]
+lint.pydocstyle.convention = "google"
 exclude = ["scripts/daysim"]
-
-[tool.ruff.pydocstyle]
-convention = "google"
 
 
 [tool.ruff.lint.per-file-ignores]
