--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,8 +39,9 @@ packages = ["src/travel_diary_survey_tools"]
 line-length = 80
 lint.select = ["ALL"]
 lint.ignore = [
-    "D203",  # Use D211 (no blank line before class)
-    "D213",  # Use D212 (summary on first line)
+    "COM812",  # Trailing comma - conflicts with formatter
+    "D203",    # Use D211 (no blank line before class)
+    "D213",    # Use D212 (summary on first line)
 ]
 lint.pydocstyle.convention = "google"
 exclude = ["scripts/daysim"]
