--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,7 @@ dev = [
     "jupyter>=1.1.1",
     "pandas>=2.3.3",
     "plotly>=6.4.0",
-    "pre-commit>=4.3.0",
-    "pytest>=8.4.2",
+    "pre-commit>=0.0",
     "pytest-cov>=7.0.0",
     "ruff>=0.14.3",
 ]
@@ -41,7 +40,7 @@ build-backend = "hatchling.build"
 packages = ["src/pipeline", "src/data_canon", "src/processing", "src/utils", "examples"]
 
 [tool.ruff]
-line-length = 80
+line-length = 100
 lint.select = ["ALL"]
 lint.pylint.max-args = 8  # Increase from default of 5 to accomodate 6 canon tables
 lint.ignore = [
@@ -79,4 +78,4 @@ testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
-addopts = "--cov=src/pipeline --cov=src/data_canon --cov=src/processing --cov-report=term-missing"
+addopts = "--cov=src --cov-report=term-missing"
