--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,9 @@ repos:
     rev: v4.3.0
     hooks:
       - id: trailing-whitespace
+        exclude: ^docs/(COLUMN_REQUIREMENTS\.md|column_requirements\.csv)$
       - id: end-of-file-fixer
+        exclude: ^docs/(COLUMN_REQUIREMENTS\.md|column_requirements\.csv)$
       - id: check-yaml
       - id: check-added-large-files
       - id: check-merge-conflict
@@ -15,3 +17,12 @@ repos:
       - id: ruff
         args: [--fix]
       - id: ruff-format
+
+  - repo: local
+    hooks:
+      - id: generate-column-matrix
+        name: Generate Column Requirements Matrix
+        entry: bash -c 'python scripts/generate_column_matrix.py && git add docs/COLUMN_REQUIREMENTS.md docs/column_requirements.csv; exit 0'
+        language: system
+        files: ^src/data_canon/
+        pass_filenames: false
